2003-01-06	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Remove fatal recursive loop by not calling 
      [self setWindowSize] from PseudoTerminal: -windowDidResize.
      The window sizing part needs some real attention. 
      Temporarily re-activating new resizing code with 
      windowWillresize: toSize: method.
       

2003-01-06	fabian
    * Fixed the display problem related to "bold"
    * Updated Chinese nib files for anti-aliasing and print&save
    * Chinese strings files updated for new contextual menu item
    * Set the version number to 0.6.1
    * Incorporated the patch sent by kuri@makino.ecei.tohoku.ac.jp
      
    
2003-01-05	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added Address Book into contextual menu. Entries 
      can be executed in a new tab or in a new window. 
      To execute in a new window, hold down the command 
      key while accessing the contextual menu.
    
    * Refactored the contextual menu code, so that the 
      text view does not have know about the address book 
      and session configuration.
      
    * Fixed AutoResizingMask of buttons in Address Book.


2003-01-04	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Can't reproduce the emacs editing bug anymore.
    
    * Fixed an emulation problem handling the CSI_RI and 
      CSI_IND tokens. This fixes the vi editing problem.
      

2003-01-01	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added support for bold character attributes.
      Only works with fonts that support bold typeface
      such as Courier.
      
    * Fixed bug where a blink attribute would cause bold 
      attributes to be lost.
      
    * Validating paste menu item only if there is a string 
      type on the pasteboard.
      
    * New resizing code did not really work, so disbled it 
      and using original method.
      

2002-12-31	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed some resizing issues by implementing 